--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -1,6 +1,3 @@
-// * {
-//   border: 2px solid cornflowerblue;
-// }
 
 // General styles
 
@@ -95,6 +92,9 @@
   align-items: flex-end;
   width: 75%;
 
+  ul {
+    padding-left: 15px;
+  }
   img {
     box-shadow: -10px 10px 0 5px $yellow;
     width: 320px;
@@ -155,7 +155,6 @@
 .blogAsideText2 li a {
   @include bodyText(2rem);
 }
-
 
 
 .commentFlex {
