--- a/styles/sass/partials/_homeMediaQueries.scss
+++ b/styles/sass/partials/_homeMediaQueries.scss
@@ -1,6 +1,6 @@
 /* Media Breakpoints */
 
-/* Small desktops */
+// 1050px screen width
 
 @media (max-width: 1050px) {
   .materialsText h2 {
@@ -26,7 +26,7 @@
   }
 }
 
-/* Landscape tablet */
+// 980px screen width
 
 @media (max-width: 980px) {
   .mainFeatures h2 {
@@ -43,7 +43,9 @@
   }
 }
 
-/* Portrait tablet */
+
+// 900px screen width
+
 
 @media (max-width: 900px) {
   h2 {
@@ -189,6 +191,8 @@
   }
 }
 
+// 750px screen width
+
 @media (max-width: 750px) {
   .mainStyleSearch {
     .styleSearchFlex {
@@ -242,6 +246,7 @@
         text-align: center;
         padding: 35px 0;
         width: 257px;
+
 
         &:active {
           background-color: rgba(6, 86, 53, 0.8);
@@ -299,6 +304,8 @@
   }
 }
 
+// 650px screen width
+
 @media (max-width: 650px) {
   .mainFeatures {
     .featuresText1 {
@@ -318,6 +325,8 @@
     }
   }
 }
+
+// 500px screen width
 
 @media (max-width: 500px) {
   .mainHeader {
@@ -365,14 +374,19 @@
   }
 }
 
+// 430px screen width
+
 @media (max-width: 430px) {
   .mainHeader {
     h1 {
       font-size: 3rem;
       width: 80%;
       margin: 45px 0;
-      // margin-left: 30px;
     }
+  }
+
+  .benefitsText2 h2 {
+    text-align: center;
   }
 
   .mainHeaderImageFlex {
@@ -412,7 +426,13 @@
     padding: 0;
     margin: 0;
   }
+
+  .styleSearchText h2 {
+    font-size: 2.5rem;
+  }
 }
+
+// 365px screen width
 
 @media (max-width: 365px) {
   .materials h2 {
@@ -426,9 +446,7 @@
   }
 
   .mainHeaderImageFlex {
-    // position: relative;
     margin: 0 auto;
-    // top: 100px;
 
     h1 {
       font-size: 3rem;
@@ -465,8 +483,6 @@
   }
  
   .benefitsFlexContainer1 {
-    /* justify-content: center; */
-    
      justify-content: flex-start;
     align-items: center;
     min-height: auto;
@@ -477,13 +493,12 @@
     
   }
 
-
-
   .benefitsText1 p,
   .benefitsText2 p {
     width: 80%;
   }
 
+  
   .mainStyleSearch h2 {
     font-size: 2rem;
     line-height: 3rem;
@@ -507,13 +522,3 @@
   
 }
 
-// 
-
-
-/* styles.css | http://127.0.0.1:5500/styles/styles.css */
-
-
-  
-
-
-// 
