fixed footer on contact and image linking

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -11,7 +11,7 @@
   height: 70vh;
   min-height: 400px;
   max-height: 500px;
-  background: url(/assets/blog-image.jpg) center / cover;
+  background: url(../assets/blog-image.jpg) center / cover;
   position: relative;
 }
 
