--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   max-height: 1000px;
   min-height: 800px;
-  background: url(/assets/header-home.jpg) center / cover;
+  background: url(../assets/header-home.jpg) center / cover;
   position: relative;
 }
 
