--- a/styles/sass/partials/_blogMediaQueries.scss
+++ b/styles/sass/partials/_blogMediaQueries.scss
@@ -88,7 +88,7 @@
     height: 70vh;
     min-height: 400px;
     max-height: 500px;
-    background: url(/assets/blog-image.jpg) right / cover;
+    background: url(../assets/blog-image.jpg) right / cover;
     position: relative;
   }
 
