--- a/styles/sass/partials/_contactMediaQueries.scss
+++ b/styles/sass/partials/_contactMediaQueries.scss
@@ -55,7 +55,7 @@
     height: 70vh;
     min-height: 400px;
     max-height: 500px;
-    background: url(/assets/contact-image.jpg) right / cover;
+    background: url(../assets/contact-image.jpg) right / cover;
     position: relative;
   }
 
