added cursor pointer to buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -381,6 +381,7 @@ body {
           align-items: center;
   width: 225px;
   height: 50px;
+  cursor: pointer;
 }
 
 .materialsText .linkButton:hover, .materialsText .linkButton:focus {
@@ -584,6 +585,7 @@ body {
           align-items: center;
   width: 225px;
   height: 50px;
+  cursor: pointer;
 }
 
 .benefitsText1 .linkButton:hover, .benefitsText1 .linkButton:focus {
@@ -626,6 +628,7 @@ body {
           align-items: center;
   width: 225px;
   height: 50px;
+  cursor: pointer;
 }
 
 .benefitsText2 .linkButton:hover, .benefitsText2 .linkButton:focus {
@@ -715,6 +718,7 @@ body {
           align-items: center;
   width: 225px;
   height: 50px;
+  cursor: pointer;
 }
 
 .styleSearchFlex .linkButton:hover, .styleSearchFlex .linkButton:focus {
@@ -1103,6 +1107,7 @@ footer p {
           align-items: center;
   width: 225px;
   height: 50px;
+  cursor: pointer;
   border: none;
   width: 100%;
   margin-top: 20px;
@@ -1385,6 +1390,7 @@ footer p {
           align-items: center;
   width: 225px;
   height: 50px;
+  cursor: pointer;
   border: none;
   width: 100%;
   margin-top: 50px;
@@ -2427,6 +2433,7 @@ a {
             align-items: center;
     width: 225px;
     height: 50px;
+    cursor: pointer;
     border: none;
     width: 100%;
     margin-top: 20px;
@@ -2793,6 +2800,7 @@ a {
             align-items: center;
     width: 225px;
     height: 50px;
+    cursor: pointer;
     border: none;
     width: 100%;
     margin-top: 20px;
