--- a/styles/sass/partials/_contactMediaQueries.scss
+++ b/styles/sass/partials/_contactMediaQueries.scss
@@ -198,7 +198,7 @@
 
     fieldset {
       width: 100%;
-      min-height: initial;
+      min-height: 535px;
     }
 
     .contactFormFlex1 {
@@ -221,7 +221,7 @@
       }
       .contactNameFlex label {
         position: absolute;
-        top: -29px;
+        top: -20px;
       }
 
       .contactEmailFlex,
